# qgrep

./: CMakeLists.txt  QString_std_hash.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  searcher_t.cpp  searcher_t.h  trigram.cpp  trigram.h  worker_t.cpp  worker_t.h
